--- a/lib/l10N/app_en.arb
+++ b/lib/l10N/app_en.arb
@@ -8,13 +8,13 @@
     "startCaption" : "Start live caption",
     "stopCaptioning" : "Stop live caption",
     "enableCameraMode" : "Enable camera mode",
-    "uploadVideo" : "upload the video you want the transcription of",
+    "uploadVideo" : "upload the video",
     "selectLanguage" : "please select the language you want to convert the video in",
     "hindi" : "Hindi",
     "english" : "English",
     "success" : "your video conversion was successful",
-    "download" : "download video",
-    "downTrans" : "download transcript",
+    "download" : "Download video",
+    "downTrans" : "Download transcript",
     "startMeetHead" : "start your first meet with your favourite person",
     "joinMeet" :  "join a meet",
     "startMeet" : "start a meet",
