final commit after the presention

--- a/lib/l10N/app_en.arb
+++ b/lib/l10N/app_en.arb
@@ -13,7 +13,7 @@
     "hindi" : "Hindi",
     "english" : "English",
     "success" : "your video conversion was successful",
-    "download" : "Download video",
+    "download" : "Download vid & subs",
     "downTrans" : "Download transcript",
     "startMeetHead" : "start your first meet with your favourite person",
     "joinMeet" :  "join a meet",
